refactoring stage one, fix bug for /user/order
